# autonomous-uav-simulation-platform

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  main.py  pyproject.toml  pyrightconfig.json  requirements.txt  run  run.py
config/: __init__.py  config.py  feature_toggles.py  settings.py
core/: __init__.py  base_station_uplink.py  batch_runner.py  buffer_aware_manager.py  clustering_according_data_distribution.py  communication.py  dataset_generator.py  deployment.py  digital_twin_map.py  energy.py  energy_model.py  environment_model.py  mission_controller.py  node_model.py  observation_builder.py  obstacle_model.py  path_planning.py  physics_engine.py  rendezvous_selector.py  reward_function.py  risk_zone_model.py  rp_selection.py  run_manager.py  seed_manager.py  simulation_runner.py  stability_monitor.py  telemetry_logger.py  temporal_engine.py
docs/: AUDIT_REPORT.md  HONEST_ASSESSMENT.md  README.md  REFACTORING_PROGRAM.md  auto_logger.py  phase1_notes.md  phase1_summary.md  phase2_notes.md  phase2_summary.md
experiments/: README.md  __init__.py  ablation_runner.py  clustering_experiment_framework.py  comparison_runner.py  scalability_runner.py
logs/: run_log.json  run_metrics.csv
metrics/: __init__.py  latex_exporter.py  logger.py  metric_engine.py
path/: __init__.py  clustering_and_path_minimization.py  ga_sequence_optimizer.py  hover_optimizer.py  pca_gls_router.py
report/: main.tex
results/: README.md
scripts/: audit_data_rate.py  audit_trace.py  consistency_check.py  create_presentation.py  validate_telemetry.py
tests/: __init__.py  (+7 more)
(+85 files in other folders)
