[project]
name = "autonomous-uav-simulation-platform"
version = "0.4.0"
description = "Discrete-event UAV trajectory planning simulator for IoT data collection"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Rajneesh"}]
readme = "README.md"

dependencies = [
    "numpy>=2.0,<3",
    "matplotlib>=3.9,<4",
    "pygame>=2.6,<3",
    "scikit-learn>=1.5,<2",
    "scipy>=1.14,<2",
    "pandas>=2.2,<3",
    "seaborn>=0.13,<1",
    "pillow>=10,<13",
    "networkx>=3.3,<4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.scripts]
uav-sim = "main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short -q"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
